tools/k8s/gke/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capstone-backend-deployment
  namespace: capstone-backend
  labels:
    app: capstone-backend-app
spec:
  revisionHistoryLimit: 0
  replicas: 2
  selector:
    matchLabels:
      app: capstone-backend-app
  template:
    metadata:
      labels:
        app: capstone-backend-app
    spec:
      nodeSelector:
        cloud.google.com/gke-spot: "true"
      terminationGracePeriodSeconds: 25
      containers:
        - name: capstone-backend-service
          image: <IMAGE>
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            limits:
              cpu: "1"
              memory: "196Mi"
            requests:
              cpu: "1"
              memory: "196Mi"
          command: [ "python" ]
          args: [ "main.py" ]
