tools/k8s/gke/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: capstone-backend-service
  namespace: capstone-backend
spec:
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: capstone-backend-app
  type: LoadBalancer
